--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,8 +14,8 @@
   --body-font: "Poppins", sans-serif;
   --big-font-size: 2rem;
   --h2-font-size: 1.25rem;
-  --normal-font-size: .938rem;
-  --smaller-font-size: .75rem;
+  --normal-font-size: 0.938rem;
+  --smaller-font-size: 0.75rem;
   /*===== Margenes =====*/
   --mb-2: 1rem;
   --mb-4: 2rem;
@@ -30,12 +30,14 @@
     --big-font-size: 3.5rem;
     --h2-font-size: 2rem;
     --normal-font-size: 1rem;
-    --smaller-font-size: .875rem;
+    --smaller-font-size: 0.875rem;
   }
 }
 
 /*===== BASE =====*/
-*, ::before, ::after {
+*,
+::before,
+::after {
   box-sizing: border-box;
 }
 
@@ -50,7 +52,9 @@ body {
   color: var(--second-color);
 }
 
-h1, h2, p {
+h1,
+h2,
+p {
   margin: 0;
 }
 
@@ -291,16 +295,19 @@ img {
   z-index: var(--z-back);
 }
 .skills__html {
-  width: 95%;
+  width: 70%;
 }
 .skills__css {
-  width: 85%;
+  width: 55%;
+}
+.skills__cs {
+  width: 40%;
 }
 .skills__js {
-  width: 65%;
+  width: 75%;
 }
 .skills__ux {
-  width: 85%;
+  width: 70%;
 }
 .skills__img {
   border-radius: 0.5rem;
@@ -311,16 +318,52 @@ img {
   row-gap: 2rem;
 }
 .work__img {
+  position: relative;
+  display: inline-block;
   box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
   border-radius: 0.5rem;
   overflow: hidden;
 }
+
+/* Ảnh phóng to khi hover */
 .work__img img {
-  transition: 1s;
+  width: 100%;
+  transition: 1s ease;
 }
-.work__img img:hover {
+
+/* .work__img:hover img {
   transform: scale(1.1);
+} */
+
+/* Overlay chứa icon */
+.work__overlay {
+  position: absolute;
+  inset: 0; /* top:0, left:0, right:0, bottom:0 */
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.4s ease;
 }
+
+/* Icon mũi tên */
+.work__overlay i {
+  font-size: 2rem;
+  color: #fff;
+  transform: translateY(10px);
+  transition: transform 0.3s ease;
+}
+
+/* Khi hover thì hiện overlay và icon nổi lên */
+.work__img:hover .work__overlay {
+  opacity: 1;
+}
+
+.work__img:hover .work__overlay i {
+  transform: translateY(0);
+}
+
 
 /* ===== CONTACT =====*/
 .contact__input {
@@ -365,6 +408,13 @@ img {
 .footer__copy {
   font-size: var(--smaller-font-size);
 }
+.laravel-icon {
+  width: 2rem;
+  height: 2rem;
+  margin: 0 1rem 0 0rem;
+}
+
+
 
 /* ===== MEDIA QUERIES=====*/
 @media screen and (max-width: 320px) {
